--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/components/1_hamburger_btn/hamburger_btn.css
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/components/1_hamburger_btn/hamburger_btn.css
@@ -3,7 +3,8 @@
   position: fixed;
   bottom: 1vh;
   right: 1vw;
-  background-color: var(--main-color);
+  background-color: #f7df1e;
+  /* background-color: var(--main-color); */
   color: var(--second-color);
   width: 4rem;
   height: 4rem;
@@ -58,12 +59,13 @@
   width: inherit;
   display: block;
   font-size: 1.5rem;
+  font-weight: bold;
   text-decoration: none;
   color: var(--main-color);
   transition: all .3s ease;
 }
 .panel .menu a:hover {
   font-weight: bold;
-  color: var(--second-color);
+  color: var(--text-color);
   background-color: var(--main-modal-color);
 }
