add deteccion de webcam

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/components/1_hamburger_btn/hamburger_btn.css
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/components/1_hamburger_btn/hamburger_btn.css
@@ -18,6 +18,7 @@
 
 .panel {
   position: fixed;
+  overflow-y: auto;
   z-index: 998;
   background-color: var(--second-modal-color);
   width: 100%;
