--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/styles.css
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/styles.css
@@ -69,3 +69,58 @@ body.dark-mode {
   --second-modal-color: var(--gray-color);
   --main-modal-color: rgba(34, 34, 34, 0.85);
 }
+
+.panel {
+  position: fixed;
+  overflow-y: auto;
+  z-index: 998;
+  background-color: var(--second-modal-color);
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  transition: transform .3s ease, opacity .3s ease;
+
+  /* Propriedades de transition */
+  /* opacidad 0 a 1 */
+  opacity: 0;
+  visibility: hidden;
+  /* sale de arriba, lo envia -100% arriba en el eje Y */
+  transform: translate(0, -100%);
+  /* sale de abajo, lo envia 100% abajo en el eje Y */
+  transform: translate(0, 100%);
+  /* sale de derecha, lo envia 100% a la derecha en el eje X */
+  transform: translate(100%, 0);
+  /* sale de izquierda, lo envia -100% a la izquierda en el eje X */
+  transform: translate(-100%, 0);
+}
+/* aplicando la clase is-active modificamos las propriedades de transition */
+.panel.is-active {
+  transform: translate(0, 0);
+  opacity: 1;
+  visibility: visible;
+}
+.panel .menu {
+  width: inherit; /* hereda del padre */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+}
+.panel .menu a {
+  padding: 2rem;
+  width: inherit;
+  display: block;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: var(--main-color);
+  transition: all .3s ease;
+}
+.panel .menu a:hover {
+  font-weight: bold;
+  color: var(--text-color);
+  background-color: var(--main-modal-color);
+}
