apply IntersectionObservern function

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/components/16_scrollSpy/scrollSpy.css
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/components/16_scrollSpy/scrollSpy.css
@@ -21,6 +21,7 @@
     background-color: var(--second-color);
     justify-content: flex-start;
     align-self: start;
+    border: 1px solid var(--second-color);
 
     /* proveniente de la clase .panel.visible */
     transform: translate(0, 0);
