--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/04_SPA/app/assets/styles.css
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/04_SPA/app/assets/styles.css
@@ -38,3 +38,40 @@ img {
   width: 4rem;
   height: 4rem;
 }
+.search-form {
+  margin: auto;
+  text-align: center;
+}
+.search-form input {
+  display: block;
+  margin: auto;
+  padding: .25rem;
+  border-radius: .25rem;
+  font-size: 1rem;
+}
+.header {
+  padding: .5rem;
+  position: sticky;
+  top: 0;
+  text-align: center;
+  background-color: #fff;
+}
+.header > * {
+  margin: 1rem auto;
+}
+.post-card {
+  margin: 1rem auto;
+  padding: 1rem;
+  width: 80%;
+  background-color: #eceff1;
+}
+.post-card p {
+  display: flex;
+  justify-content: space-between;
+}
+.grid-fluid {
+  margin: 1rem auto;
+  max-width: 90%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+}
