SPA vista de busqueda

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/04_SPA/app/assets/styles.css
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/04_SPA/app/assets/styles.css
@@ -107,3 +107,12 @@ img {
   display: block;
   max-width: 100%;
 }
+
+
+.error mark {
+  padding: .5rem;
+  border-radius: .5rem;
+  display: inline-block;
+  color: #fff;
+  background-color: #01579b;
+}
