--- a/3 Front End Development Libraries/02_react/02_react-middle/src/ejercicios/tarea_6/components/Modal.css
+++ b/3 Front End Development Libraries/02_react/02_react-middle/src/ejercicios/tarea_6/components/Modal.css
@@ -7,6 +7,8 @@
   min-height: 100vh;
   background-color: rgba(0, 0, 0, .75);
   display: none;
+  justify-content: center;
+  align-items: center;
 }
 .modal.is-open {
   display: flex;
