--- a/3 Front End Development Libraries/02_react/08_react-reducers/src/index.css
+++ b/3 Front End Development Libraries/02_react/08_react-reducers/src/index.css
@@ -23,13 +23,6 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 10px;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
 
 h1 {
   font-size: 3.2em;
@@ -66,4 +59,16 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.box {
+  padding: 1rem;
+  margin: 1rem;
+  box-shadow: 0 0 1rem #00000025 inset;
+}
+
+.grid-responsive {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 1rem;
 }
